--- a/analysis/1. Palette pipeline (Drosophila slices as example).Rmd
+++ b/analysis/1. Palette pipeline (Drosophila slices as example).Rmd
@@ -1,17 +1,22 @@
 ---
-title: "Drosophila slices"
-author: "Yang， Tao & Jie"
-date: "2023-06-19"
-output: 
-  html_document: 
+title: "Inferring spatial gene expression patterns from _Drosophila_ pseudo bulk data"
+author: "Yang Dong"
+date: "2024-03-26"
+output:
+  html_document:
     toc: yes
     toc_float: yes
     code_folding: hide
-editor_options: 
+editor_options:
   chunk_output_type: console
 ---
-### Setup
+<style type="text/css">
+  body{
+  font-size: 12pt;
+}
+</style>
 
+### Setup
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 ```
@@ -20,29 +25,16 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 library(limma)
 library(Seurat)
 library(readr)
-library(edgeR)
-library(AnnotationHub)
 library(tidyverse)
 library(magrittr)
 library(pander)
-library(ggrepel)
-library(scales)
-library(plyr)
-library(purrr)
-library(scatterplot3d)
-library(rgl)
 library(SingleCellExperiment)
-library(Matrix.utils)
 library(reshape2)
-library(ggalt)
-library(ggtext)
 library(BayesSpace)
 library(MuSiC)
-library(scater)
 library(ggplot2)
 library(ggpubr)
-library(scater)
-
+library(Matrix.utils)
 
 theme_set(theme_bw())
 panderOptions("big.mark", ",")
@@ -50,58 +42,32 @@ panderOptions("table.split.table", Inf)
 panderOptions("table.style", "rmarkdown")
 if (interactive()) setwd(here::here("analysis"))
 ```
-### Seurat object construction
-```{r}
-E14h_counts <- read.table(here::here("reference","stereoseq data","drosophila","X.csv"), sep = ",")
-E14h_genename <- read_csv(here::here("reference","stereoseq data","drosophila","var.csv"))
-colnames(E14h_counts) <- E14h_genename$geneID
 
-E14h_metadata <- read.csv(here::here("reference","stereoseq data","drosophila","obs.csv"))
-rownames(E14h_counts) <- E14h_metadata$X
+### Summary
+Here we take 2 neighboring ST slices (slice 4 and slice 5) from _Drosophila_ ST data. Slice 4 will be used as the ST reference, while slice 5 will be converted a pseudo bulk data. Palette will then be implemented to infer the expression patterns from the pseudo bulk data using the slice 4 as the ST reference. The inferred expression patterns will then be compared with the real expression of slice 5 ST data.  
 
-
-E14h_counts.matrix <- E14h_counts %>%
-  as.matrix() %>%
-  t()
-
-E14h_st <- CreateSeuratObject(counts = E14h_counts.matrix, project = "E14h_st")
-
-E14h_st@meta.data$slice_ID <- E14h_metadata$slice_ID
-E14h_st@meta.data$raw_x <- E14h_metadata$raw_x
-E14h_st@meta.data$raw_y <- E14h_metadata$raw_y
-E14h_st@meta.data$new_x <- E14h_metadata$new_x
-E14h_st@meta.data$new_y <- E14h_metadata$new_y
-E14h_st@meta.data$new_z <- E14h_metadata$new_z
-E14h_st@meta.data$annotation <- E14h_metadata$annotation
-write_rds(E14h_st, here::here("output","E14h","E14h_st_seurat.rds"), compress = "gz")
-
+### Load data
+Load the neighboring _Drosophila_ ST slice.
+```{r load data}
+Drosophila_slice <- readRDS(here::here("test","Drosophila_slice.rds"))
 ```
 
-```{r}
-slice_subset = subset(E14h_st, subset = slice_ID == "E14-16h_a_S04" | slice_ID == "E14-16h_a_S05" | slice_ID == "E14-16h_a_S06")
-
-color_df <- data.frame(unique(slice_subset$annotation))
+### _Drosophila_ ST slices 
+Here we visualize the ST slice and each ST spot is colored with spot annotation. The two ST slices show similar cell type distribution. 
+```{r Drosophila ST slices, out.width="60%", fig.align = 'center',fig.cap = "The adjacent _Drosophila_ ST slices."}
+# Assign color to each cell type
+color_df <- data.frame(unique(Drosophila_slice$annotation))
 colnames(color_df)[1] <- "annotation"
-color_df$color <- c("#FFF799","#2ED9FF",
-                              "#683b79",
-                              "#009200",
-                              "#6e9BC5",
-                              "#F091A0",
-                              "#FEAF16",
-      "#ff66ff","#AEF359","#C0C0C0")
-
-x <- slice_subset@meta.data %>%
+color_df$color <- c("#FFF799","#2ED9FF","#683b79","#009200","#6e9BC5","#F091A0","#FEAF16","#ff66ff","#AEF359","#C0C0C0")
+x <- Drosophila_slice@meta.data %>%
   left_join(color_df)
+Drosophila_slice@meta.data$color <- x$color
 
-slice_subset@meta.data$color <- x$color
+slice_4 <- subset(Drosophila_slice, subset = slice_ID == "E14-16h_a_S04")
+slice_5 <- subset(Drosophila_slice, subset = slice_ID == "E14-16h_a_S05")
 
-
-slice_4 <- subset(slice_subset, subset = slice_ID == "E14-16h_a_S04")
-slice_5 <- subset(slice_subset, subset = slice_ID == "E14-16h_a_S05")
-slice_6 <- subset(slice_subset, subset = slice_ID == "E14-16h_a_S06")
-
-
-ggplot(slice_4@meta.data %>% as.data.frame(),aes(x=new_x, y=new_y, color=color)) +
+# Visualize ST slice
+g1 <- ggplot(slice_4@meta.data %>% as.data.frame(),aes(x=new_x, y=new_y, color=color)) +
   geom_point(size=0.5) +
   theme_classic() +
   xlim(-25, 25) +
@@ -113,203 +79,244 @@ ggplot(slice_4@meta.data %>% as.data.frame(),aes(x=new_x, y=new_y, color=color))
         axis.text.y=element_blank(),
         axis.title.x=element_blank(),
         axis.title.y=element_blank(),
-        legend.position="none") 
+        legend.position="none")
+g2 <- ggplot(slice_5@meta.data %>% as.data.frame(),aes(x=new_x, y=new_y, color=color)) +
+  geom_point(size=0.5) +
+  theme_classic() +
+  xlim(-25, 25) +
+  ylim(-25, 25) +
+    coord_fixed(ratio = 1, xlim = NULL, ylim = NULL, expand = TRUE, clip = "on") +
+  scale_color_manual(values = levels(slice_5@meta.data$color %>% as.factor())) +
+  theme_classic() +
+  theme(axis.text.x=element_blank(),
+        axis.text.y=element_blank(),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        legend.position="none")
 
-  # labs(title = "10 hpf-slice1") +
-  # theme(plot.title = element_markdown(box.color = "black",
-  #                                     linewidth = 0.5,
-  #                                     r = unit(0, "mm"), linetype = 1,
-  #                                     padding = unit(3, "mm"),
-  #                                     hjust = 0.5, 
-  #                                     size = 15,
-  #                                     face='bold')) +
-
-
-write_rds(slice_subset, here::here("output","E14h","slice_subset.rds"), compress = "gz")
+ggarrange(g1, g2, ncol = 2)
 ```
-
+<p>&nbsp;</p>
+### Construct pseudo bulk data and select highly expressed genes
+Aggregate expression of ST data to generate pseudo bulk. Slice 5 is convert to pseudo bulk, while the aggregated expression of ST data (slice 4) is used for selecting highly expressed genes.
 ```{r}
-slice_subset <- readRDS(here::here("output","E14h","slice_subset.rds"))
-
-slice_sce <- SingleCellExperiment(assays = list(counts = slice_subset@assays$RNA@counts), 
-                           colData = slice_subset@meta.data)
-slice_bulk <- colSums(t(slice_subset@assays$RNA@data)) %>% as.data.frame() 
-
+# Convert both to pseudo bulk data
+slice_sce <- SingleCellExperiment(assays = list(counts = Drosophila_slice@assays$RNA@counts), 
+                           colData = Drosophila_slice@meta.data)
 groups <- colData(slice_sce)[, c("slice_ID")]
 slice_bulk <- aggregate.Matrix(t(counts(slice_sce)), 
                        groupings = groups, fun = "sum") %>% 
   as.data.frame() %>% t()
 
+# Slice 5 as pseudo bulk
+slice_5_bulk <- slice_bulk[,2, drop = FALSE] %>% set_colnames("slice_5")
+# Slice 4 as aggregated ST data for selecting highly expressed genes
+slice_4_ST_sum <- slice_bulk[,1, drop = FALSE] %>% set_colnames("slice_4_ST")
 
-slice_4_ST_sum <- slice_bulk[,1, drop = FALSE]
-
-slice_4_ST_sum_high_expressed <- slice_4_ST_sum %>%
+# Select highly expressed genes in ST data
+slice_4_ST_sum_high_exp <- slice_4_ST_sum %>%
   as.data.frame() %>%
-  set_colnames("Counts") %>%
-  dplyr::filter(rownames(.) %in% rownames(slice_bulk)) %>%
-  dplyr::filter(.$Counts > 30)
+  dplyr::filter(rownames(.) %in% rownames(slice_5_bulk)) %>%
+  dplyr::filter(.$slice_4_ST > 30)
 
-
-slice_bulk_high_expressed_reorder <- slice_bulk[match(rownames(slice_4_ST_sum_high_expressed), rownames(slice_bulk)),,drop = FALSE] %>%
+# Reorder genes of pseudo bulk data (slice 5) based on the ST data (slice 4)
+slice_5_bulk_reorder <- slice_5_bulk[match(rownames(slice_4_ST_sum_high_exp), rownames(slice_5_bulk)),,drop = FALSE] %>%
   as.data.frame()
+
+# Define the ratio of the pseudo bulk (slice 5) and the aggregate ST (slice 4) as gene filter
+gene_filter <- (slice_5_bulk_reorder/slice_4_ST_sum_high_exp) %>%
+  set_colnames("ratio") %>%
+  .[is.finite(rowSums(.)),, drop = FALSE]
 ```
 
-### Get stable genes 
-```{r}
-gene_filter <- slice_bulk_high_expressed_reorder[,2,drop = FALSE]/slice_4_ST_sum_high_expressed 
-colnames(gene_filter) <- "factor"
+We use density plot to visualize the expression ratios of the pseudo bulk (slice 5) and the aggregated ST (slice 4). We take the top 2000 genes closest to the mean and median ratios for the following analyses. These genes are highly expressed in both pseudo bulk and ST data.
+```{r, out.width="40%", fig.align = 'center',fig.cap = "Density plot showing the expression ratio of pseudo bulk and aggregated ST data."}
+ggplot(gene_filter, aes(x=ratio)) + 
+  geom_density() + theme_classic() +
+  theme(text = element_text(size = 20)) 
+  
+# The difference of gene ratio to the mean and median ratio
+gene_filter$differ <- abs(gene_filter$ratio - (mean(gene_filter$ratio)+median(gene_filter$ratio))/2)
 
-gene_filter_filtered <- gene_filter %>%
-     .[is.finite(rowSums(.)),, drop = FALSE] 
-gene_filter_filtered$differ <- abs(gene_filter_filtered$factor - (mean(gene_filter_filtered$factor)+median(gene_filter_filtered$factor))/2)
-
-stable_genes <- gene_filter_filtered %>%
+# Select the top 2000 genes closer to the mean and median for spatial clustering and deconvolution
+high_exp_genes <- gene_filter %>%
   .[order(.$differ),] %>%
    top_n(.,-2000)
 ```
-
-
-### spatial clustering and deconvolution
-```{r}
-slice_4 <- subset(slice_subset, subset = slice_ID == "E14-16h_a_S04")
+<p>&nbsp;</p>
+### Spatial clustering of ST data
+BayesSpace is employed for spatial clustering on ST data (slice 4). Only the selected 2000 highly expressed genes are used for spatial clustering. The cluster identities are then assigned to each ST spot. 
+```{r, out.width="40%", fig.align = 'center', fig.cap = "Spatial Clustering of ST data."}
+# Convert coordinates into pixel coordinates for BayesSpace
 metadata <-  slice_4@meta.data
 metadata$col <-  metadata$new_x %>% as.numeric() %>% as.integer()
 metadata$row <-  metadata$new_y %>% as.numeric() %>% as.integer()
 
+# Construct sce object
 sce <- SingleCellExperiment(assays = list(counts = slice_4@assays$RNA@counts, logcounts = slice_4@assays$RNA@data),
                             colData=metadata)
 
-
-sce_filtered <- sce[rownames(stable_genes),]
-sce_filtered <- spatialPreprocess(sce_filtered, platform="ST", 
+# Only take highly expressed genes for spatial clustering
+sce_filtered <- sce[rownames(high_exp_genes),]
+sce_filtered <- spatialPreprocess(sce_filtered, platform="ST",
                               n.PCs=4,n.HVGs = 2000, log.normalize=TRUE)
-
-
+# Select the number of clusters
 p <- qTune(sce_filtered, qs=seq(2, 10), platform="ST")
-qPlot(p)
 
+# Clustering with BayesSpace
 set.seed(149)
-cluster <- spatialCluster(p, q=5, platform="ST", d=7,
+spatial_cluster <- spatialCluster(p, q=5, platform="ST", d=7,
                            init.method="kmeans", model="t", gamma=2,
                            nrep=10000, burn.in=100,
                            save.chain=TRUE)
 
-clusterPlot(cluster, color="black") +
+# Visualizing spatial clusters
+clusterPlot(spatial_cluster, color="black") +
   theme_bw() +
-  xlab("Column") +
-  ylab("Row") 
+  xlab("") +
+  ylab("") + 
+  theme(text = element_text(size = 20)) 
 
-
-
-slice_4$spatial_cluster <- cluster$spatial.cluster
-
-prop.table(table(slice_4$spatial_cluster))
+slice_4$spatial_cluster <- spatial_cluster$spatial.cluster
 Idents(slice_4) <- slice_4$spatial_cluster
+
+# Check the proportions of each cluster
+prop_table <- prop.table(table(slice_4$spatial_cluster)) %>% t()
+colnames(prop_table) <- c("cluster 1","cluster 2","cluster 3","cluster 4","cluster 5")
+rownames(prop_table) <- "Proportion"
+knitr::kable(prop_table,
+             caption = "The proportions of each cluster.")
 ```
-
-### Deconvolution
-```{r}
-
+<p>&nbsp;</p>
+### Pseudo bulk deconvolution
+MuSiC is employed for deconvolution. Also, only the selected 2000 highly expressed genes are used for deconvolution. We can then achieve the abundances of each cluster in pseudo bulk data.
+```{r Use MuSiC for deconvolution}
+# Pre-process data for MuSiC
 bulk.est <- Biobase::ExpressionSet(assayData = slice_bulk %>% as.matrix())
+sc.eset <- ExpressionSet(assayData = as.matrix(GetAssayData(slice_4[rownames(high_exp_genes),])), phenoData = new("AnnotatedDataFrame", slice_4@meta.data))
 
+slice_4$sample_id <- colnames(slice_4)
+sce <- SingleCellExperiment(assays = list(counts = slice_4[rownames(high_exp_genes),]@assays$RNA@counts, logcounts = slice_4[rownames(high_exp_genes),]@assays$RNA@data),
+                            colData=slice_4@meta.data)
 
-sc.eset <- ExpressionSet(assayData = as.matrix(GetAssayData(slice_4[rownames(stable_genes),])), phenoData = new("AnnotatedDataFrame", slice_4@meta.data))
-
-Est.pro = music_prop(bulk.eset = bulk.est, sc.eset = sc.eset,  clusters = "spatial_cluster")
+# MuSiC deconvolution
+Est.pro = music_prop(bulk.mtx = exprs(bulk.est), sc.sce = sce,  clusters = "spatial_cluster", samples = "sample_id")
 proportion <- Est.pro$Est.prop.weighted
 proportion_reorder <- proportion[, c("1","2","3","4","5")]
 
+# The estimated proportion of each cluster in pseudo bulk data
+prop_table_2 <- proportion_reorder[2,] %>% t()
+colnames(prop_table_2) <- c("cluster 1","cluster 2","cluster 3","cluster 4","cluster 5")
+rownames(prop_table_2) <- "Proportion"
+knitr::kable(prop_table_2,
+             caption = "The estimated proportions of each cluster in pseudo bulk data (slice 5).")
 ```
-
-
-### variable factor calculation
-```{r}
+<p>&nbsp;</p>
+### Variable factor calculation
+Here we define a variable factor to adjust the expression difference between pseudo bulk and ST data. The variable factor is defined as the ratio of bulk expression matrix to the pseudo bulk matrix. Each gene has its own variable factor to adjust its expression.
+```{r Variable factor calculation}
+# The average gene expression of each cluster
 cluster.averages <- AverageExpression(slice_4) %>%
   as.data.frame() %>%
   as.matrix()
 
 cluster.averages_filtered <- cluster.averages %>%
   as.data.frame() %>%
-  rownames_to_column() %>% 
+  rownames_to_column() %>%
   dplyr::filter(.$rowname %in% rownames(slice_bulk)) %>%
   column_to_rownames(var= "rowname")  %>%
   as.matrix() %>%
   .[,c("RNA.1","RNA.2","RNA.3","RNA.4","RNA.5")]
 
-
+# The abundance of each cluster in pseudo bulk 
 abundance <- proportion_reorder %>%
-  .[2,,drop=FALSE] %>% 
-  as.data.frame() %>% 
+  .[2,,drop=FALSE] %>%
+  as.data.frame() %>%
   as.matrix()
 
-# adjusted_matrix <- cluster.averages_filtered_reorder %*% abundance 
 
-bulk_reorder <- slice_bulk[match(rownames(cluster.averages_filtered), rownames(slice_bulk)),2,drop=FALSE] %>%
-  as.data.frame() 
+slice_5_bulk_reorder <- slice_5_bulk[match(rownames(cluster.averages_filtered), rownames(slice_5_bulk)),,drop=FALSE] %>%
+  as.data.frame()
 
-# lib_size_ratio <- sum(S10_2_counts_bulk.set)/sum(adjusted_matrix)
-
-# variable_factor <- S10_2_counts_bulk.set_reorder/(adjusted_matrix * lib_size_ratio) 
-variable_factor <- bulk_reorder/(cluster.averages_filtered %*% (abundance %>% t())) 
-
-variable_factor_filtered <- variable_factor %>% 
+# Define variable factor
+variable_factor <- (slice_5_bulk_reorder/(cluster.averages_filtered %*% (abundance %>% t()))) %>%
   .[is.finite(rowSums(.)),, drop = FALSE] %>%
-    as.data.frame()
+  as.data.frame() %>%
+  set_colnames("var")
 
-variable_factor_filtered_2 <- rep(variable_factor_filtered,5) %>%
+variable_factor_matrix <- rep(variable_factor,5) %>%
   as.data.frame() %>%
   set_colnames(c("1","2","3","4","5"))
-rownames(variable_factor_filtered_2) <- rownames(variable_factor_filtered)
-
-
-adjusted_matrix <- ((cluster.averages_filtered[rownames(variable_factor_filtered_2),] * variable_factor_filtered_2)) 
-
+rownames(variable_factor_matrix) <- rownames(variable_factor)
 ```
 
+```{r print variable factor, echo=FALSE}
+print("The top 5 rows of variable factor")
+head(variable_factor,5)
+# Use variable factor to adjust the average gene expression of each cluster and achieve the adjusted overall gene expression of each cluster called adjusted_matrix
+```
 
+The adjusted matrix is the overall gene expression of each cluster, which is obtained by taking the dot product of the cluster expression matrix of ST slice and the variable factor. 
+```{r adjusted matrix}
+adjusted_matrix <- ((cluster.averages_filtered[rownames(variable_factor_matrix),] * variable_factor_matrix)) 
+colnames(adjusted_matrix) <- c("cluster 1","cluster 2","cluster 3","cluster 4","cluster 5")
+```
+
+```{r print adjusted matrix, echo=FALSE}
+print("The top 5 rows of adjusted matrix")
+head(adjusted_matrix,5)
+```
+
+<p>&nbsp;</p>
 ### Estimate expression of each spot
-```{r}
-#### Nearest 8 spots
-ST <- colSums(t((slice_4@assays$RNA@data))) %>%
+The expression of each spot is estimated through a loop algorithm. In each interaction of the loop, the procedure begins by selecting one random spot and its neighboring spots. The number of neighboring spots can be changed depending on the data. The expression of spots belonging to the same cluster is aggregated to form a pseudo bulk data called regional cluster ST (RST).
+Here we assume that the ratio of RST to the entire ST data is equal to the ratio of the adjusted RST to the adjusted matrix. We define the ratio of RST to the entire ST as regional factor K. The adjust regional ST equals to the dot product of adjusted matrix and regional factor K. The expression of adjusted RST is then evenly allocated into the selected spots of this cluster.
+After thousands of interactions, the average expression of each spot is almost stable and considered as the output estimated expression.
+```{r expression allocation}
+ST <- slice_4_ST_sum %>%
     as.data.frame() %>%
     rownames_to_column() %>%
-    dplyr::select(Gene=rowname, Counts = '.')
+    dplyr::select(Gene=rowname, Counts = 'slice_4_ST')
 
 
-
-output_final <- data.frame(matrix(ncol = 0, nrow = length(rownames(variable_factor_filtered))))
-rownames(output_final) <- rownames(variable_factor_filtered)
+#### Nearest 8 spots
+output_final <- data.frame(matrix(ncol = 0, nrow = length(rownames(variable_factor_matrix))))
+rownames(output_final) <- rownames(variable_factor_matrix)
 for (i in 1:5000) {
+  # Select one random spot
   set.seed(i)
   slice_4.random.obj <- slice_4[, sample(colnames(slice_4), size = 1, replace=F)]
   spot <- slice_4.random.obj@meta.data[,c("new_x","new_y")] %>% as.data.frame()
   df <- slice_4@meta.data[,c("new_x","new_y")] %>% as.data.frame()
+  # Calculate the distance from other spots to the selected spot
   df$distance = sqrt((df$new_x - spot$new_x)^2 + (df$new_y - spot$new_y)^2)
-  df <- df[order(df$distance),][1:9,] 
+  # Here we select the nearest 8 spots. The number of the nearest spots can be changed here. 
+  df <- df[order(df$distance),][1:9,]
   slice_4.random.neighbor <-  slice_4[,rownames(df)]
-  
-  output_region <- data.frame(matrix(ncol = 0, nrow = length(rownames(variable_factor_filtered))))
-  rownames(output_region) <- rownames(variable_factor_filtered)
+  output_region <- data.frame(matrix(ncol = 0, nrow = length(rownames(variable_factor_matrix))))
+  rownames(output_region) <- rownames(variable_factor_matrix)
+  # For each cluster in the selecting spots
   for (k in as.numeric(levels(as.factor(slice_4.random.neighbor$spatial_cluster)))){
+    # Select the spots belonging to the same cluster
     cluster <- subset(slice_4.random.neighbor, subset = spatial_cluster == k)
-  
+    # Sum the expression of these spots from the same cluster
     RST <- colSums(t((cluster@assays$RNA@counts))) %>%
       as.data.frame() %>%
       rownames_to_column() %>%
       dplyr::select(Gene=rowname, Counts = '.')
-    
+    # Define a regional factor K as the ratio of RST to ST
     K <- RST$Counts/ST$Counts %>%
       as.data.frame()
     rownames(K) <- ST$Gene
-    
     K_filtered <- K %>%
       rownames_to_column() %>%
       dplyr::select(Gene=rowname, factor = '.') %>%
-      dplyr::filter(.$Gene %in% rownames(variable_factor_filtered)) %>%
+      dplyr::filter(.$Gene %in% rownames(variable_factor_matrix)) %>%
       column_to_rownames(var= "Gene")  %>%
       as.matrix()
-    
+    # Adjusted regional bulk equals to the dot product of adjusted matrix and regional factor K
     region_bulk <- (adjusted_matrix[,k] %>% as.data.frame()) * K_filtered
+    # Assign expression to each spot
     each_spot <- data.frame(region_bulk/length(cluster$orig.ident))
     output <- cbind(each_spot, rep(each_spot[1],  length(cluster$orig.ident)))
     output <- output[1:(length(output)-1)]
@@ -317,52 +324,53 @@ for (i in 1:5000) {
     output_region <- output_region %>%
       cbind(output)
     }
-  output_final <- output_final %>% 
+  output_final <- output_final %>%
     cbind(output_region)
 }
 
-
+# Calculate the average expression of each spot
 cell_list <- as.list(rownames(slice_4@meta.data))
 
-spot_average_counts_final <- data.frame(matrix(ncol = 0, nrow = length(rownames(variable_factor_filtered))))
-rownames(spot_average_counts_final) <- rownames(variable_factor_filtered)
+spot_average_counts_final <- data.frame(matrix(ncol = 0, nrow = length(rownames(variable_factor_matrix))))
+rownames(spot_average_counts_final) <- rownames(variable_factor_matrix)
 spot_rep_times <- data.frame()
 
 for ( i in 1:length(cell_list)) {
-  spot <- colnames(output_final) == cell_list[i] 
+  spot <- colnames(output_final) == cell_list[i]
   spot_counts <- output_final[, spot, drop = FALSE]
   spot_rep_times <- spot_rep_times %>%
     rbind(length(colnames(spot_counts)))
   spot_average_counts <-  data.frame(rowSums(spot_counts))/length(spot_counts)
-  colnames(spot_average_counts) <- cell_list[i] 
+  colnames(spot_average_counts) <- cell_list[i]
   spot_average_counts_final <- spot_average_counts_final %>%
     cbind(spot_average_counts)
 }
 
-```
-
-```{r}
+# Covert Palette-inferred data into seurat object
 slice_4_adjusted <- CreateSeuratObject(spot_average_counts_final,assay = "RNA",meta.data = metadata)
-
 slice_4_adjusted@images$image <- slice_4@images$image
-
+saveRDS(slice_4_adjusted, here::here("test","slice_4_adjusted.rds"))
+```
+<p>&nbsp;</p>
+### Palette performance assessment
+We assess the Palette performance through comparing the expression patterns of Palette implemented data to original ST data and _in situ_ hybridization images. Here we show the expression patterns of marker genes CG5171 (amnioserosa) and Idgf6 (hemolymph). Compared the original ST data (Left), the Palette-implemented data (Right) significantly increases the signal-to-noise ratio and exhibits more specific expression patterns, which are more similar to the bona fide patterns observed by _in situ_ hybridization.
+```{r, out.width="70%", fig.align = 'center', fig.cap = "Comparsion of expression patterns."}
+# Construct sce object for expression visualization 
 metadata <-  slice_4_adjusted@meta.data
 metadata$col <-  slice_4_adjusted@meta.data$col
 metadata$row <-  slice_4_adjusted@meta.data$row
-
-saveRDS(slice_4_adjusted, here::here("output","E14h","slice_4_adjusted.rds"))
 
 
 sce_S4 <- SingleCellExperiment(assays = list(counts = slice_4_adjusted@assays$RNA@counts, logcounts = slice_4_adjusted@assays$RNA@data),
                             colData= metadata)
 
-sce_S4 <- spatialPreprocess(sce_S4, platform="ST", 
+sce_S4 <- spatialPreprocess(sce_S4, platform="ST",
                               n.PCs=4,n.HVGs = 2000, log.normalize=FALSE,skip.PCA=TRUE)
 
 
-featurePlot(
+p1 <- featurePlot(
   sce_S4,
-  "CG6337",
+  "CG5171",
   assay.type = "logcounts",
   diverging = FALSE,
   low = NULL,
@@ -373,7 +381,18 @@ featurePlot(
   is.enhanced = NULL,
 )
 
-saveRDS(slice_5, here::here("output","E14h","slice_5.rds"))
+p2 <- featurePlot(
+  sce_S4,
+  "Idgf6",
+  assay.type = "logcounts",
+  diverging = FALSE,
+  low = NULL,
+  high = "darkblue",
+  mid = NULL,
+  color = NULL,
+  platform = NULL,
+  is.enhanced = NULL,
+)
 
 slice_5_metadata <-  slice_5@meta.data
 slice_5_metadata$col <-  slice_5_metadata$new_x %>% as.numeric() %>% as.integer()
@@ -383,12 +402,12 @@ slice_5_metadata$row <-  slice_5_metadata$new_y %>% as.numeric() %>% as.integer(
 sce_S5 <- SingleCellExperiment(assays = list(counts = slice_5@assays$RNA@counts, logcounts = slice_5@assays$RNA@data),
                             colData=slice_5_metadata)
 
-sce_S5 <- spatialPreprocess(sce_S5, platform="ST", 
+sce_S5 <- spatialPreprocess(sce_S5, platform="ST",
                               n.PCs=4,n.HVGs = 2000, log.normalize=FALSE,skip.PCA=TRUE)
 markers <- FindAllMarkers(slice_5)
-featurePlot(
+p3 <- featurePlot(
   sce_S5,
-  "CG6337",
+  "CG5171",
   assay.type = "logcounts",
   diverging = FALSE,
   low = NULL,
@@ -399,221 +418,26 @@ featurePlot(
   is.enhanced = NULL,
 )
 
-```
+p4 <- featurePlot(
+  sce_S5,
+  "Idgf6",
+  assay.type = "logcounts",
+  diverging = FALSE,
+  low = NULL,
+  high = "darkblue",
+  mid = NULL,
+  color = NULL,
+  platform = NULL,
+  is.enhanced = NULL,
+)
 
-#### Performance comparison
+ggarrange(p3, p1, p4, p2, ncol = 2, nrow = 2)
+```
+<p>&nbsp;</p>
+### Session information
 ```{r}
-# nCounts
-gene_counts <- colSums(slice_4_adjusted@assays$RNA@data %>% as.data.frame()) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_counts$group <- "Adjusted_S04"
-
-gene_counts_origin <- colSums(slice_5@assays$RNA@data %>% as.data.frame()) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_counts_origin$group <- "S05"
-
-gene_counts_merge <- rbind(gene_counts_origin, gene_counts)
-
-ggboxplot(data = gene_counts_merge, x= "group",y="Number",xlab = FALSE, ylab = "nCounts",
-          color = "group",
-          #legend = "right"
-          ) 
-ggplot(gene_counts_merge, aes(x=factor(group), y=Number, color=group)) + 
-  labs(title="Plot of nCount", y = "nCounts")+
-  geom_boxplot(width=0.4,outlier.shape = NA) +
-  theme_classic() +
-  theme(legend.position = "none") +
-  scale_x_discrete(limits=c("S05", "Adjusted_S04")) +
-  scale_color_manual(values=c("#C77CFF","#56B4E9"))
-
-
-# nFeatures
-gene_number <- nexprs(slice_4_adjusted@assays$RNA@data) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_number$group <- "Adjusted_S04"
-gene_number_origin <- nexprs(slice_5@assays$RNA@counts) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_number_origin$group <- "S05"
-
-gene_number_merge <- rbind(gene_number_origin, gene_number)
-
-
-ggboxplot(data = gene_number_merge, x= "group",y="Number",xlab = FALSE, ylab = "nFeatures",
-          color = "group",
-          #legend = "right"
-          ) + theme(legend.position = "none")
-
-ggplot(gene_number_merge, aes(x=factor(group), y=Number, color=group)) + 
-  labs(title="Plot of nCount", y = "nFeatures")+
-  geom_boxplot(width=0.4,outlier.shape = NA) +
-  theme_classic() +
-  theme(legend.position = "none") +
-  scale_x_discrete(limits=c("S05", "Adjusted_S04")) +
-  scale_color_manual(values=c("#C77CFF","#56B4E9"))
-
-
-
-
+devtools::session_info()
 ```
 
-#### Performance comparison
-```{r}
-# nCounts
-gene_counts <- colSums(slice_4_adjusted@assays$RNA@data %>% as.data.frame()) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_counts$group <- "Adjusted_S04"
+ 
 
-gene_counts_origin <- colSums(slice_4@assays$RNA@data %>% as.data.frame()) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_counts_origin$group <- "S04"
-
-gene_counts_merge <- rbind(gene_counts_origin, gene_counts)
-
-ggboxplot(data = gene_counts_merge, x= "group",y="Number",xlab = FALSE, ylab = "nCounts",
-          color = "group",
-          #legend = "right"
-          ) 
-ggplot(gene_counts_merge, aes(x=factor(group), y=Number, color=group)) + 
-  labs(title="Plot of nCount", y = "nCounts")+
-  geom_boxplot(width=0.4,outlier.shape = NA) +
-  theme_classic() +
-  theme(legend.position = "none") +
-  scale_x_discrete(limits=c("S04", "Adjusted_S04")) +
-  scale_color_manual(values=c("#C77CFF","#56B4E9"))
-
-
-# nFeatures
-gene_number <- nexprs(slice_4_adjusted@assays$RNA@data) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_number$group <- "Adjusted_S04"
-gene_number_origin <- nexprs(slice_4@assays$RNA@counts) %>% as.data.frame() %>%
-  set_colnames("Number")
-gene_number_origin$group <- "S04"
-
-gene_number_merge <- rbind(gene_number_origin, gene_number)
-
-
-ggboxplot(data = gene_number_merge, x= "group",y="Number",xlab = FALSE, ylab = "nFeatures",
-          color = "group",
-          #legend = "right"
-          ) + theme(legend.position = "none")
-
-ggplot(gene_number_merge, aes(x=factor(group), y=Number, color=group)) + 
-  labs(title="Plot of nCount", y = "nFeatures")+
-  geom_boxplot(width=0.4,outlier.shape = NA) +
-  theme_classic() +
-  theme(legend.position = "none") +
-  scale_x_discrete(limits=c("S04", "Adjusted_S04")) +
-  scale_color_manual(values=c("#C77CFF","#56B4E9"))
-
-
-
-
-```
-
-### Expression correlation of Marker genes
-```{r}
-Idents(slice_5) <- slice_5$annotation
-Markers <- FindAllMarkers(slice_5,logfc.threshold = 0.3) 
-
-top5 <- Markers %>%
-  group_by(cluster) %>%
-  top_n(n = 5, wt = avg_log2FC) 
-
-
-S05_df <- data.frame(row.names = rownames(slice_5)[(rownames(slice_5) %in% top5$gene)])
-for (i in unique(slice_5$annotation) ){
-  subset <- subset(slice_5, subset = annotation == i)
-  subset_features <- subset[top5$gene,]@assays[["RNA"]]@data %>%
-    rowMeans() %>%
-    as.data.frame()
-  colnames(subset_features) <- print(i)
-  S05_df <- S05_df %>%
-    cbind(subset_features)
-}
-
-
-Adjusted_S04_df <- data.frame(row.names = rownames(slice_4_adjusted)[(rownames(slice_4_adjusted) %in% top5$gene)])
-for (i in unique(slice_4_adjusted$annotation) ){
-  subset <- subset(slice_4_adjusted, subset = annotation == i)
-  subset_features <- subset[top5$gene,]@assays[["RNA"]]@data %>%
-    rowMeans() %>%
-    as.data.frame()
-  colnames(subset_features) <- print(i)
-  Adjusted_S04_df <- Adjusted_S04_df %>%
-    cbind(subset_features)
-}
-
-
-order <- c("CNS","epidermis","muscle","trachea","fat body","amnioserosa","midgut","salivary gland")
-x <- S05_df[rownames(S05_df),order]
-y <- Adjusted_S04_df[rownames(S05_df),order]
-
-colnames(x) <- paste0(colnames(x) , "_S05")
-colnames(y) <- paste0(colnames(y) , "_S04")
-
-output <- data.frame(row.names = colnames(x))
-p.val <- data.frame(row.names = colnames(x))
-for (j in 1:ncol(x)) {
-  for (i in 1:ncol(y)) {
-    a <- cor.test(x[,j], y[,i], method = "pearson") 
-    output[j,i] <- a$estimate
-    p.val[j,i] <- a$p.value
-    colnames(output)[i] <- colnames(y)[i]
-    colnames(p.val)[i] <- colnames(y)[i]
-  }
-}
-
-pheatmap::pheatmap(output,
-                   cluster_rows=FALSE,
-                   cluster_cols=FALSE,
-                   cellwidth = 25,
-                   cellheight = 25,
-               #    display_numbers = p.val
-                 )
-```
-
-
-### Plot signal intensity
-```{r}
-ISH <- read_csv(here::here("slice images","E14","intensity","CG6337_ISH.csv"))
-ISH$x <- ISH$`Distance_(pixels)`/max(ISH$`Distance_(pixels)`)
-ISH$Group <- c("ISH")
-ISH$z <- ISH$Gray_Value %>% scale()
-ISH <- ISH %>% as.data.frame() %>% dplyr::select(-`Distance_(pixels)`)
-
-
-Adjusted_S04 <- read_csv(here::here("slice images","E14","intensity","CG6337_adjusted_S04.csv"))
-Adjusted_S04$x <- Adjusted_S04$`Distance_(inches)`/max(Adjusted_S04$`Distance_(inches)`)
-Adjusted_S04$Group <- c("Adjusted_S04")
-Adjusted_S04$z <- Adjusted_S04$Gray_Value %>% scale()
-Adjusted_S04 <- Adjusted_S04 %>% as.data.frame() %>% dplyr::select(-`Distance_(inches)`)
-
-S05 <- read_csv(here::here("slice images","E14","intensity","CG6337_S05.csv"))
-S05$x <- S05$`Distance_(inches)`/max(S05$`Distance_(inches)`)
-S05$Group <- c("S05")
-S05$z <- S05$Gray_Value %>% scale()
-S05 <- S05 %>% as.data.frame() %>% dplyr::select(-`Distance_(inches)`)
-
-Merged <- ISH %>%
-  rbind(Adjusted_S04) %>%
-  rbind(S05) 
-
-ggplot(data = Merged, aes(x, y = z, col=Group)) +
-  geom_line(linetype="solid", size=0.5) +
-  labs( x="Distance_AP", y="Scaled intensity")  +
-  scale_x_continuous(breaks=seq(0,1,0.2), labels=seq(0,1,0.2)) +
-  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), panel.background = element_blank(), axis.line = element_line(colour = "black"),legend.position = "none") +
-  theme(plot.title = element_markdown(box.color = "black",
-                                      linewidth = 0.5,
-                                      r = unit(0, "mm"), linetype = 1,
-                                      padding = unit(3, "mm"),
-                                      hjust = 0.5,
-                                      size = 12,
-                                      face='bold')) +
-  coord_fixed(ratio = 0.1, xlim = NULL, ylim = NULL, expand = TRUE, clip = "on") +
-  scale_color_manual(values = c("#C77CFF",
-                              "#3366ff",
-                              "#F9A603"))
-
-```
